--- a/src/app/components/post/post-item/post-item.component.html
+++ b/src/app/components/post/post-item/post-item.component.html
@@ -1,8 +1,12 @@
 <div *ngIf="post" class="post-item">
     <div class="post-container">
         <div class="title-container">
-            <h5><span class="title" *ngIf="post.title">{{ post.title }}</span></h5>
-            <span class="category" *ngIf="showCategory">Category: {{ post.category }}</span>
+            <h5>
+                <span class="title" *ngIf="post.title"> 
+                    <a [routerLink]="['/post', post.id]">{{ post.title }}</a> 
+                </span>
+            </h5>
+            <span class="category" *ngIf="showCategory">Category: {{ categoryName }}</span>
         </div>
         <div class="content-container">
             <p>{{ post.content }}</p>
