--- a/src/app/components/post/post-item/post-item.component.scss
+++ b/src/app/components/post/post-item/post-item.component.scss
@@ -6,8 +6,7 @@
     margin: 0;
     .author-container {
         float: left;
-        // width: 20em
-        margin: 0 0.5em 1em;
+        margin: 0 0.5em 0.5em;
         .photo {
             display: inline;
             margin: 0.4em;
@@ -18,3 +17,8 @@
         }
     }
 }
+
+a.disabled {
+    pointer-events: none;
+    cursor: default;
+ }
