--- a/src/app/pages/forum-page/forum-page.html
+++ b/src/app/pages/forum-page/forum-page.html
@@ -1,16 +1,29 @@
-<div class="category-container">
-    Category:
-    <div class="category-list" *ngFor="let category of categoryList">
-        <button 
-        class="btn {{ (activeCategory.id === category.id) ? 'btn-secondary' : 'btn-outline-secondary' }}"
-        [value]="category" 
-        (click)="onClickCategory(category)">{{ category.name }}</button>
-    </div>
-    
-</div>
+<div class="forum-container">
 
-<app-post 
-    *ngIf="fire.post.pagePosts"
-    [postIds]="fire.post.pagePostIds"
-    [category]="activeCategory"
-></app-post>
+    <div class="post-list"  [hidden]="openPostView">
+        <div class="category-container">
+            Category:
+            <div class="category-list" *ngFor="let category of categoryList">
+                <button
+                class="btn {{ (activeCategory.id === category.id) ? 'btn-secondary' : 'btn-outline-secondary' }}"
+                [value]="category"
+                (click)="onClickCategory(category)">{{ category.name }}</button>
+            </div>
+
+        </div>
+
+        <app-post
+        *ngIf="fire.post.pagePosts"
+        [postIds]="fire.post.pagePostIds"
+        [category]="activeCategory"
+        (open)="onOpenPost($event)"
+        ></app-post>
+
+    </div>
+
+    <div *ngIf="openPostView" class="post-view">
+        <app-post-view [post]="postViewData" (close)="openPostView = false"></app-post-view>
+    </div>
+
+
+</div>
