--- a/src/app/pages/profile-page/update/update-profile-page.html
+++ b/src/app/pages/profile-page/update/update-profile-page.html
@@ -24,36 +24,39 @@
     <div class="row">
         <div class="col-sm">
             <div class="form-container center">
-                <input type="text" class="form-item-text" placeholder="*Firstname" [(ngModel)]="user.firstName" ><br>
-                <input type="text" class="form-item-text" placeholder="Middlename" [(ngModel)]="user.middleName" ><br>
-                <input type="text" class="form-item-text" placeholder="*Lastname" [(ngModel)]="user.lastName" ><br>
-                <!-- Gender -->
-                <div class="gender-container">
-                    <div class="gender-label form-item-radio">
-                        <span>*Gender:</span>
+                <form (ngSubmit)=" onClickSubmit() ">
+                    <input type="text" name="firstname"  class="form-item-text" placeholder="*Firstname" [(ngModel)]="user.firstName" ><br>
+                    <input type="text" name="middlename"  class="form-item-text" placeholder="Middlename" [(ngModel)]="user.middleName" ><br>
+                    <input type="text" name="lastname" class="form-item-text" placeholder="*Lastname" [(ngModel)]="user.lastName" ><br>
+                    <!-- Gender -->
+                    <div class="gender-container">
+                        <div class="gender-label form-item-radio">
+                            <span>*Gender:</span>
+                        </div>
+                        <div class="form-item-radio">
+                            <label class="pointer">
+                                Male: <input type="radio" name="gender" id="gender-m" value="M" class="pointer" [(ngModel)]="user.gender" >
+                            </label>
+                        </div>
+                        <div class="form-item-radio">
+                            <label class="pointer">
+                                Female: <input type="radio"  name="gender" id="gender-f" value="F" class="pointer" [(ngModel)]="user.gender">
+                            </label>
+                        </div>
                     </div>
-                    <div class="form-item-radio">
-                        <label class="pointer">
-                            Male: <input type="radio" name="gender" id="gender-m" value="M" class="pointer" [(ngModel)]="user.gender" >
+                    <!-- Birthdate -->
+                    <div class="birthday-container">
+                        <label>
+                            <span>*Birthday:</span> <input type="date" name="birthday" class="form-item-text" [(ngModel)]="user.birthday">
                         </label>
                     </div>
-                    <div class="form-item-radio">
-                        <label class="pointer">
-                            Female: <input type="radio"  name="gender" id="gender-f" value="F" class="pointer" [(ngModel)]="user.gender">
-                        </label>
-                    </div>
-                </div>
-                <!-- Birthdate -->
-                <div class="birthday-container">
-                    <label>
-                        <span>*Birthday:</span> <input type="date" class="form-item-text" [(ngModel)]="user.birthday">
-                    </label>
-                </div>
-                <!-- Submit button -->
-                <button type="submit" class="btn btn-primary form-item-text" [disabled]="loader" (click)="onClickSubmit()">{{ (loader) ? 'Please wait...' : 'Submit' }}</button>
+                    <!-- Submit button -->
+                    <button type="submit" class="btn btn-primary form-item-text" [disabled]="loader">{{ (loader) ? 'Please wait...' : 'Submit' }}</button>
+                </form>
                 <p>Fields with asterisk '*' are required.</p>
+                
             </div>
-            {{ user | json }}
+            <!-- {{ user | json }} -->
         </div>
     </div>
 </div>
