--- a/src/app/components/comment/comment-live.component.html
+++ b/src/app/components/comment/comment-live.component.html
@@ -1,13 +1,21 @@
-<!-- <form (ngSubmit)=" onSubmit( $event ) ">
-  <input type="text" name="content" [(ngModel)]="comment.content" [disabled]="loader.creating">
-  <app-file-upload [pathToStorage]=" 'posts/' + post.id + '/comments/' + comment.id " [currentData]=" comment.data " [allowMultipleFiles]="true"></app-file-upload>
-  <button type="submit" *ngIf=" ! loader.creating ">Create Comment</button>
-  <span class="loader" *ngIf="loader.creating">Creating a post. Please wait.</span>
-</form> -->
+
 
 <div class="loader" *ngIf="loader.commentList">Loading comments. Please wait.</div>
-<ul>
-  <li *ngFor=" let id of commentIds">
-    <app-comment [post]="post" [comment]="comments(id)"></app-comment>
-  </li>
-</ul>
+<div class="chat-box">
+  <div #balloon class="balloon-container" [scrollTop]="scroll">
+    <div *ngFor=" let id of commentIds">
+      <app-comment [post]="post" [comment]="comments(id)" [id]="id"></app-comment>
+    </div>
+  </div>
+  <div class="text-area">
+    <form (ngSubmit)=" onSubmit( $event ) ">
+      <textarea name="content" [(ngModel)]="comment.content" [disabled]="loader.creating"></textarea>
+      
+      <!-- <app-file-upload [pathToStorage]=" 'posts/' + post.id + '/comments/' + comment.id " [currentData]=" comment.data " [allowMultipleFiles]="true"></app-file-upload> -->
+      
+      <button type="submit" class="btn btn-primary" *ngIf=" ! loader.creating ">Create Comment</button>
+      <span class="loader" *ngIf="loader.creating">Creating a post. Please wait.</span>
+    </form>
+  </div>
+</div>
+
