--- a/src/app/components/comment/comment.component.html
+++ b/src/app/components/comment/comment.component.html
@@ -1,5 +1,5 @@
-<section class="comment" [style.margin-left]="comment.depth * 30 + 'px'">
-
+<section class="comment" [style.margin-left]="liveChatStatus ? 0 : comment.depth * 30 + 'px'">
+<!-- <section class="comment"> -->
 
   <div class="content" *ngIf=" ! form.created ">
     <div>
@@ -8,7 +8,8 @@
     <div style="padding: 1em; background-color:aquamarine;">
       {{ comment.content }}
     </div>
-    <!-- <div class="files" *ngIf=" !comment.deleted && comment.data?.length ">
+<!-- 
+    <div class="files" *ngIf=" !comment.deleted && comment.data?.length ">
       <div class="file" style="display: inline-block; overflow: hidden; margin: 2px; padding: 2px; width: 120px; height: 100px; border: 1px solid grey;"
         *ngFor="let data of comment.data">
         <img src="{{ data.thumbnailUrl ? data.thumbnailUrl : data.url }}">
@@ -18,24 +19,29 @@
   </div>
 
 
-  <!-- <div class="buttons" *ngIf="!form.created"> -->
+  <div class="buttons" *ngIf="!form.created">
+
+    <!-- <button>Reply</button> -->
+
     <!-- <button (click)="onClickEdit()" *ngIf="myComment()">Edit</button> -->
     <!-- <button (click)="onClickDelete()" *ngIf="myComment()">Delete</button> -->
-    <!-- <button (click)="onClickLike()" *ngIf=" !comment['likeInProgress'] ">Like({{comment.numberOfLikes ? comment.numberOfLikes : 0}})</button> -->
-    <!-- <span class="loader" *ngIf=" comment['likeInProgress'] ">Like...</span> -->
-    <!-- <button (click)="onClickDislike()" *ngIf=" !comment['dislikeInProgress'] ">Dislike({{comment.numberOfDislikes ? comment.numberOfDislikes : 0}})</button> -->
-    <!-- <span class="loader" *ngIf=" comment['dislikeInProgress'] ">Dislike...</span> -->
-  <!-- </div> -->
+    <button (click)="onClickLike()" *ngIf=" !comment['likeInProgress'] ">Like({{comment.numberOfLikes ? comment.numberOfLikes : 0}})</button>
+    <span class="loader" *ngIf=" comment['likeInProgress'] ">Like...</span>
+    <button (click)="onClickDislike()" *ngIf=" !comment['dislikeInProgress'] ">Dislike({{comment.numberOfDislikes ? comment.numberOfDislikes : 0}})</button>
+    <span class="loader" *ngIf=" comment['dislikeInProgress'] ">Dislike...</span>
+  </div>
 
 
-  <div class="form">
+  <!-- <div class="form" *ngIf="! liveChatStatus">
     <form (ngSubmit)=" onSubmit( $event ) ">
-      <input type="text" name="content" [(ngModel)]="form.content" [disabled]="loader.progress">
+      <input type="text" name="content" [(ngModel)]="form.content" [disabled]="loader.progress"> -->
+
       <!-- <app-file-upload [pathToStorage]=" 'posts/' + post.id + '/comments/' + form.id " [currentData]=" form.data " [allowMultipleFiles]="true"></app-file-upload> -->
-      <button type="submit" *ngIf=" ! loader.progress ">{{ form.created ? 'Edit' : 'Create' }} Comment</button>
+
+      <!-- <button type="submit" *ngIf=" ! loader.progress ">{{ form.created ? 'Edit' : 'Create' }} Comment</button>
       <button type="button" (click)="onClickEditCancel()" *ngIf=" form.created && ! loader.progress">Cancel</button>
       <span class="loader" *ngIf="loader.progress">Requesting. Please wait.</span>
     </form>
-  </div>
+  </div> -->
 
 </section>
