--- a/src/app/components/comment/comment.component.html
+++ b/src/app/components/comment/comment.component.html
@@ -3,7 +3,7 @@
 
   <div class="content" *ngIf=" ! form.created ">
     <div>
-      {{ comment.displayName }} at {{ comment.date }} / {{ comment.id }}
+      {{ comment.displayName }} at {{ commentDate }} / {{ comment.id }}
     </div>
     <div style="padding: 1em; background-color:aquamarine;">
       {{ comment.content }}
