--- a/src/app/components/post/post-form/post-form.component.html
+++ b/src/app/components/post/post-form/post-form.component.html
@@ -2,7 +2,7 @@
     <form (ngSubmit)="onSubmit($event)">
             <input type="text" name="title" id="" class="post-title" placeholder="Post title..." [(ngModel)]="post.title"><br>
             <textarea name="content" cols="60" rows="5" class="post-content" placeholder="Post content..." [(ngModel)]="post.content"></textarea><br>
-            <button class="btn btn-primary right" [disabled]="loader">Submit</button><br>
+            <button class="btn btn-primary right" [disabled]="loader">Submit</button>
     </form>
 </div>
 <!-- {{ post | json }} / {{ loader }} -->
