--- a/src/app/components/post/post-item/post-item.component.html
+++ b/src/app/components/post/post-item/post-item.component.html
@@ -17,7 +17,7 @@
     </div>
     <div class="author-container">
         <div class="photo">
-            <app-avatar [profilePhoto]="post.authorPhoto"></app-avatar>
+            <!-- <app-avatar [profilePhoto]="post.authorPhoto"></app-avatar> @deprecated - will not be updated when user decides to change profile pic --> 
         </div>
         <div class="info">
             <span class="author-name"><b>{{ post.displayName }}</b></span>
