--- a/src/app/pages/profile-page/update/update-profile-page.html
+++ b/src/app/pages/profile-page/update/update-profile-page.html
@@ -14,7 +14,7 @@
                 [pathToStorage] = "'profile-photo'"
                 [allowMultipleFiles] = "false"
                 [deleteOldFiles] = "true"
-                [currentData] = "user.profilePhoto"
+                [data] = "user.profilePhoto"
                 (uploadStart) = "onUploadStart()"
                 (uploadDone) = "onUploadDone($event)"></app-file-upload>
             </div>
