--- a/src/app/components/category/category.component.html
+++ b/src/app/components/category/category.component.html
@@ -5,14 +5,14 @@
   <input type="text" name="" id="" class="form-item-text" placeholder="Category Name" [(ngModel)]="category.name"><br>
   <input type="text" name="" id="" class="form-item-text" placeholder="Category Description" [(ngModel)]="category.description"><br>
   <input type="number" name="" id="" class="form-item-text" placeholder="Number of posts per page" [(ngModel)]="category.numberOfPostsPerPage"><br>
-  <label for="liveChat" class="live-chat form-item-text" ><input type="checkbox" name="liveChat" id="liveChat" [(ngModel)]="category.enableLiveChat"><span style="margin: 0.3em;">Enable Live Chat</span></label>
+  <!-- <label for="liveChat" class="live-chat form-item-text" ><input type="checkbox" name="liveChat" id="liveChat" [(ngModel)]="category.enableLiveChat"><span style="margin: 0.3em;">Enable Live Chat</span></label> -->
   <button class="btn btn-primary form-item-text" (click)="onClickSubmitCategory()" [disabled]="loader">{{ loader ? 'Please wait...' : category.created ? 'Edit Category' : 'Create Category' }}</button>
   <button class="btn btn-default form-item-text" (click)="onClickCancel()" *ngIf="category.created && ! loader">Cancel</button>
 </div>
 
 <h5>Category List</h5>
 <ul *ngFor="let category of categoryList" >
-  <li>{{ category.id }} / {{ category.name }} / {{ category.description }} / {{ category.numberOfPostsPerPage }} / {{ category.enableLiveChat }} <br>
+  <li>{{ category.id }} / {{ category.name }} / {{ category.description }} / {{ category.numberOfPostsPerPage }}<br>
     <button (click)="onClickEdit(category)">edit</button>
     <button (click)="onClickDelete(category)">Delete</button>
   </li>
