--- a/src/app/components/comment/comment-live.component.scss
+++ b/src/app/components/comment/comment-live.component.scss
@@ -4,7 +4,7 @@
     padding: 0;
     .chat-container {
         overflow-y: scroll;
-        height: 100%;
+        max-height: 100%;
     }
     .input-box {
         form {
