--- a/src/app/components/post/post-form/post-form.component.scss
+++ b/src/app/components/post/post-form/post-form.component.scss
@@ -6,7 +6,7 @@
         .post-title {
             margin: 0.5em 0 0.5em 0;
             padding: 0.5em;
-            width: 32em;
+            width: 100%;
         }
         .post-content {
             margin:0 0 0.5em 0;
