--- a/src/app/components/comment/comment-live.component.scss
+++ b/src/app/components/comment/comment-live.component.scss
@@ -1,3 +1,4 @@
+@import '~sass/variables';
 .chat-box {
     height: 30em;
     width: 100%;
@@ -5,6 +6,22 @@
     .chat-container {
         overflow-y: scroll;
         max-height: 100%;
+        // .comment-item {
+        //     width: 100%;
+        //     padding: 1em;
+        //     float: right;
+        //     clear: right;
+        //     color: $light;
+        //     background-color: $secondary-color;
+        // }
+        // .other-comment {
+        //     float: left;
+        //     clear: left;
+        //     width: 100%;
+        //     padding: 1em;
+        //     color: black;
+        //     background-color: $secondary-shade;
+        // }
     }
     .input-box {
         form {
