--- a/src/app/components/post/post-form/post-form.component.html
+++ b/src/app/components/post/post-form/post-form.component.html
@@ -3,7 +3,7 @@
         <input type="text" name="title" id="" class="post-title" placeholder="Post title..." [(ngModel)]="post.title" [disabled]="loader"><br>
         <textarea name="content" cols="60" rows="5" class="post-content" placeholder="Post content..." [(ngModel)]="post.content" [disabled]="loader"></textarea><br>
         
-        <div class="file-container d-flex align-items-center justify-content-center" *ngIf="post.data">
+        <div class="file-container d-flex align-items-center justify-content-center" *ngIf="post.data && post.data.length > 0">
             <div class="file-list" *ngFor="let data of post.data">
                 <img [src]="data.thumbnailUrl ? data.thumbnailUrl : data.url" alt="">
             </div>
