--- a/src/app/pages/forum-page/forum-page.html
+++ b/src/app/pages/forum-page/forum-page.html
@@ -7,14 +7,14 @@
                 <button
                 class="btn {{ (activeCategory.id === category.id) ? 'btn-secondary' : 'btn-outline-secondary' }}"
                 [value]="category"
+                [disabled]="activeCategory.id === category.id || loader"
                 (click)="onClickCategory(category)">{{ category.name }}</button>
             </div>
 
         </div>
 
         <app-post
-        *ngIf="fire.post.pagePosts"
-        [postIds]="fire.post.pagePostIds"
+        *ngIf="fire.post.pagePostIds && fire.post.pagePostIds.length > 0"
         [category]="activeCategory"
         (open)="onOpenPost($event)"
         ></app-post>
@@ -24,6 +24,5 @@
     <div *ngIf="openPostView" class="post-view">
         <app-post-view [post]="postViewData" (close)="openPostView = false"></app-post-view>
     </div>
-
 
 </div>
