update on category and post

--- a/src/app/components/category/category.component.scss
+++ b/src/app/components/category/category.component.scss
@@ -1,6 +1,8 @@
 @import '~sass/mixins';
 
-.live-chat {
+.live-chat-timeout {
     @include no-select;
     cursor: pointer;
+    width: 16.5em;
+    padding: 0.5em;
 }
